# VedatErsoyMSA

./: README.md  pyproject.toml
VedatMSA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vedatmsa/: __init__.py  align.py  distance.py  muscle.py  tree.py
